# litware-internal

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  LINUX_BUILD.md  Makefile  PORTING_SUMMARY.md  README.md
.b/: README.md
.b/.github/: CONTRIBUTING.md
.b/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  offset_update.md
.b/.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.b/electron-menu/: electron.vite.config.ts  package-lock.json  package.json  vite.web.config.ts
.b/electron-menu/electron/: bridge.ts  main.ts  preload.ts
.claude/: launch.json
.github/: CONTRIBUTING.md
.github/workflows/: build.yml  release.yml
cmake/compat/windows-headers/: Psapi.h
cmake/toolchains/: llvm-mingw-x86_64.cmake
docs/: LINUX.md  MENU_AND_CONFIG.md
electron-menu/: electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
electron-menu/electron/: bridge.ts  main.ts  preload.ts
electron-menu/src/: App.tsx  index.css  index.html
electron-menu/src/components/: HudOverlays.tsx  Logo.tsx  MenuWindow.tsx  Sidebar.tsx  TitleBar.tsx  ToastList.tsx
electron-menu/src/components/tabs/: AimbotTab.tsx  ConfigTab.tsx  MiscTab.tsx  SkinsTab.tsx  VisualsTab.tsx  WorldTab.tsx
electron-menu/src/controls/: ColorPicker.tsx  Dropdown.tsx  EspPreview.tsx  Keybind.tsx  Reveal.tsx  Section.tsx  Slider.tsx  Toggle.tsx
electron-menu/src/lib/: dllKeys.ts
electron-menu/src/store/: useStore.ts
electron-menu/src/types/: config.ts
litware-dll/: CMakeLists.txt  README.md  litware-dll.rc  litware-dll.vcxproj  resource.h
litware-dll/res/: cs2_gun_icons.h  jetbrains_mono.h  upheaval.h
litware-dll/src/: Fonts.cpp  Fonts.h  bypass.cpp  bypass.h  debug.cpp  debug.h  entry.cpp  linux_init.cpp
litware-dll/src/core/: electron_bridge.cpp  electron_bridge.h  entity.h  esp_data.h  game_state.h  globals.cpp  globals.h  interfaces.cpp  interfaces.h  offset_helpers.h  offsets.h  world_to_screen.h
litware-dll/src/hooks/: render_hook.cpp  render_hook_config.cpp  render_hook_game.cpp  render_hook_menu.cpp  render_hook_visuals.cpp  render_hook_vk.cpp
litware-dll/src/memory/: memory.h
litware-dll/src/modules/: third_person.cpp  third_person.h
litware-dll/src/platform/: compat.h
litware-dll/src/platform/linux/: hook.h  input.h  proc_maps.h
offsets/: README.md  update_offsets.py
offsets/output/: README.md
scripts/: setup-dev-linux.sh
